clusters/tayacluster/apps/wiki/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: mediawiki
  labels:
    app: mariadb
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
  clusterIP: None
  selector:
    app: mariadb
